--- a/res/layout-land/home.xml
+++ b/res/layout-land/home.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/app_name"
+            android:text="@string/app_title"
             android:textColor="@color/pastel_red"
             android:textSize="50sp"
             android:textStyle="italic|bold"
