--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="-10dp"
             android:gravity="center"
-            android:text="@string/app_name"
+            android:text="@string/app_title"
             android:textColor="@color/pastel_red"
             android:textSize="50sp"
             android:textStyle="italic|bold"
