First working version with listview for PC results. Still a long ways to go. Since the PC page now basically mocks the descriptive page there is a lot of abstraction left as well.

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -36,4 +36,14 @@
         <item>@drawable/kurtosis</item>
     </string-array>
 
+    <!--
+    <string-array name="pc_titles">
+        <item>@string/n_fact</item>
+        <item>@string/r_fact</item>
+        <item>@string/n_perm_r</item>
+        <item>@string/n_comb_r</item>
+        <item>@string/indistinct_perm</item>
+    </string-array>
+    -->
+
 </resources>
