PC title text is now styled (subscripted)

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -86,15 +86,7 @@
     </style>
 
     <style name="pc_results_textview" parent="basic_textview">
-        <item name="android:layout_weight">3</item>
-        <item name="android:gravity">center</item>
-        <item name="android:padding">5dp</item>
-    </style>
-
-    <style name="pc_results_textview_title" parent="pc_results_textview">
-        <item name="android:lineSpacingExtra">3dp</item>
-        <item name="android:typeface">serif</item>
-        <item name="android:layout_weight">2</item>
+        <item name="android:lineSpacingExtra">5dp</item>
     </style>
 
     <style name="default_style">
@@ -127,7 +119,7 @@
         <item name="android:layout_weight">3</item>
     </style>
 
-    <style name="basic_listview">
+    <style name="listview">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">fill_parent</item>
         <item name="android:background">@drawable/black_border</item>
