--- a/res/layout/basic_reference.xml
+++ b/res/layout/basic_reference.xml
@@ -6,7 +6,7 @@
 
     <ListView
         android:id="@+id/basic_reference_lvList"
-        style="@style/basic_listview"
+        style="@style/listview"
         android:layout_margin="6dp" >
     </ListView>
 
