--- a/res/layout/perm_comb_results_item.xml
+++ b/res/layout/perm_comb_results_item.xml
@@ -4,14 +4,15 @@
     android:orientation="horizontal" >
 
     <TextView
-        android:id="@+id/pc_tvResultTitle"
-        style="@style/basic_textview"
-        android:layout_weight="4" />
+        android:id="@+id/pc_tvResultsTitle"
+        style="@style/pc_results_textview"
+        android:layout_weight="2"
+        android:typeface="serif" />
 
     <TextView
-        android:id="@+id/pc_tvResultAnswer"
-        style="@style/basic_textview"
-        android:layout_weight="7"
+        android:id="@+id/pc_tvResultsResult"
+        style="@style/pc_results_textview"
+        android:layout_weight="3"
         android:gravity="right" />
 
 </LinearLayout>
