--- a/res/menu/basic.xml
+++ b/res/menu/basic.xml
@@ -1,15 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/settings_save_list"
+        android:id="@+id/menu_save_list"
         android:showAsAction="never"
         android:title="@string/save_list"/>
     <item
-        android:id="@+id/settings_load_list"
+        android:id="@+id/menu_load_list"
         android:showAsAction="never"
         android:title="@string/load_or_delete_list"/>
     <item
-        android:id="@+id/settings_reference"
+        android:id="@+id/menu_reference"
         android:showAsAction="never"
         android:title="@string/reference_guide"/>
 
