--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,22 +1,18 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
 
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
-    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
-    </style>
-
     <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
 
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
         <item name="android:windowContentOverlay">@null</item>
+    </style>
+
+    <style name="HomeTheme" parent="AppTheme">
+        <item name="android:windowBackground">@color/fifa</item>
+    </style>
+
+    <style name="NotHomeTheme" parent="AppTheme">
+        <item name="android:windowBackground">@drawable/white_texture</item>
     </style>
 
     <style name="home_screen_button">
