--- a/res/layout/perm_comb_results_item.xml
+++ b/res/layout/perm_comb_results_item.xml
@@ -6,8 +6,7 @@
     <TextView
         android:id="@+id/pc_tvResultsTitle"
         style="@style/pc_results_textview"
-        android:layout_weight="2"
-        android:typeface="serif" />
+        android:layout_weight="2" />
 
     <TextView
         android:id="@+id/pc_tvResultsResult"
