--- a/res/layout/perm_comb_results_item.xml
+++ b/res/layout/perm_comb_results_item.xml
@@ -5,12 +5,12 @@
 
     <TextView
         android:id="@+id/pc_tvResultsTitle"
-        style="@style/pc_results_textview"
+        style="@style/results_textview"
         android:layout_weight="2" />
 
     <TextView
         android:id="@+id/pc_tvResultsResult"
-        style="@style/pc_results_textview"
+        style="@style/results_textview"
         android:layout_weight="3"
         android:gravity="right" />
 
