Abstracts perm & comb styles to allow pro version to take advantage of theming

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -5,7 +5,7 @@
     <attr name="greenOutlinedDrawable" format="reference" />
     <attr name="defaultOutlinedDrawable" format="reference" />
     <attr name="defaultOutlinedSelector" format="reference" />
-    <attr name="resultsTextViewTextColor" format="reference" />
+    <attr name="textViewTextColor" format="reference" />
     <attr name="editTextColor" format="reference" />
 
 </resources>
