--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -66,7 +66,7 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">18sp</item>
-        <item name="android:textColor">?attr/resultsTextViewTextColor</item>
+        <item name="android:textColor">?attr/textViewTextColor</item>
     </style>
 
     <style name="default_style">
@@ -85,6 +85,7 @@
         <item name="android:gravity">center</item>
         <item name="android:layout_weight">2</item>
         <item name="android:lineSpacingExtra">3dp</item>
+        <item name="android:textColor">?attr/textViewTextColor</item>
     </style>
 
     <style name="basic_edittext" parent="default_style">
@@ -98,6 +99,7 @@
     <style name="pc_edittext" parent="pc_style">
         <item name="android:inputType">number</item>
         <item name="android:layout_weight">3</item>
+        <item name="android:textColor">?attr/editTextColor</item>
     </style>
 
     <style name="listview">
