--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -14,7 +14,7 @@
     <style name="NotHomeTheme" parent="AppTheme">
         <item name="android:windowBackground">@drawable/white_texture</item>
         <item name="defaultOutlinedDrawable">@drawable/black_border</item>
-        <item name="resultsTextViewTextColor">@android:color/black</item>
+        <item name="textViewTextColor">@android:color/black</item>
         <item name="editTextColor">@android:color/black</item>
         <item name="defaultOutlinedSelector">@drawable/black_border_selector</item>
     </style>
