--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -15,31 +15,32 @@
         <item name="android:layout_margin">2dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:textSize">30sp</item>
+        <item name="android:textColor">?attr/textViewTextColor</item>
     </style>
 
     <style name="keypad_button_default" parent="keypad_button">
-        <item name="android:background">@drawable/black_border_selector</item>
+        <item name="android:background">?attr/defaultOutlinedSelector</item>
         <item name="android:onClick">keypadPress</item>
     </style>
 
     <style name="keypad_button_backspace" parent="keypad_button">
-        <item name="android:background">@drawable/red_border_selector</item>
+        <item name="android:background">?attr/redOutlinedSelector</item>
         <item name="android:longClickable">true</item>
         <item name="android:onClick">backSpace</item>
     </style>
 
     <style name="keypad_button_multiplier" parent="keypad_button">
-        <item name="android:background">@drawable/brown_border_selector</item>
+        <item name="android:background">?attr/brownOutlinedSelector</item>
         <item name="android:onClick">keypadPress</item>
     </style>
 
     <style name="keypad_button_comma" parent="keypad_button">
-        <item name="android:background">@drawable/blue_border_selector</item>
+        <item name="android:background">?attr/blueOutlinedSelector</item>
         <item name="android:onClick">keypadPress</item>
     </style>
 
     <style name="keypad_button_done" parent="keypad_button">
-        <item name="android:background">@drawable/green_border_selector</item>
+        <item name="android:background">?attr/greenOutlinedSelector</item>
         <item name="android:onClick">donePress</item>
     </style>
 
