--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -107,6 +107,7 @@
         <item name="android:background">?attr/defaultOutlinedDrawable</item>
         <item name="android:padding">1dp</item>
         <item name="android:overScrollMode" tools:ignore="NewApi">never</item>
+        <item name="android:fadingEdgeLength">0dp</item>
     </style>
 
 </resources>
